syntax = "proto3";
package monitor.proto;

message OS {
    string os_name = 1;
    string os_startup_time = 2;
    
  }